@@ -16,6 +16,7 @@
 
 #include "view.h"
 
+void open_grep_view(struct view *prev);
 extern struct view_ops grep_ops;
 
 #endif
